--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "rollup": "^3.28.1",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-inject": "^3.0.2",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.6",
-    "svelte": "^3.59.2"
+    "svelte": "^3.59.2",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
