--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/svelte": "^4.0.3",
     "autoprefixer": "^10.4.15",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.28",
     "rollup": "^3.28.1",
     "rollup-plugin-css-only": "^4.3.0",
@@ -21,7 +25,10 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.6",
     "svelte": "^3.59.2",
-    "tailwindcss": "^3.3.3"
+    "svelte-testing-library": "^1.6.0",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.3"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
